@@ -48,6 +48,14 @@ object ScaldingBuild extends Build {
       cp.foreach(f => println(s"${f.metadata.get(moduleID.key)} => ${f.data}"))
     },
 
+    fork in Test := true,
+
+    javaOptions in Test ++= Seq("-Xmx2048m", "-XX:ReservedCodeCacheSize=384m", "-XX:MaxPermSize=384m"),
+
+    concurrentRestrictions in Global := Seq(
+      Tags.limitAll(1)
+    ),
+
     parallelExecution in Test := false,
 
     scalacOptions ++= Seq("-unchecked", "-deprecation"),
